# GeometricFigs-Sculptor

./: CMakeLists.txt  LICENSE.txt  README.md  cutbox.h  cutellipsoid.cpp  cutellipsoid.h  cutsphere.h  cutvoxel.cpp  cutvoxel.h  figurageometrica.h  file_functions.h  main.cpp  offFile.off  putbox.cpp  putbox.h  putellipsoid.h  putsphere.h  putvoxel.h  reader.cpp  reader.h  sculptor.h  txtFile.txt  voxel.h
Documentation/: Doxyfile  doxygen_log.txt
Documentation/html/: _c_make_files_23_829_85-msvc4_2_compiler_id_c_x_x_2_c_make_c_x_x_compiler_id_8cpp.html  _qt___min_g_w__64__bit-_debug_2_c_make_files_23_829_83_2_compiler_id_c_x_x_2_c_make_c_x_x_compiler_id_8cpp.html  annotated.html  class_cut_box.html  class_cut_ellipsoid-members.html  class_cut_voxel.html  class_put_ellipsoid-members.html  class_put_sphere-members.html  class_put_sphere.html  class_put_voxel-members.html  class_put_voxel.html  class_reader-members.html  class_sculptor-members.html  class_sculptor.html  classes.html  cutbox_8cpp.html  cutbox_8h_source.html  cutellipsoid_8cpp.html  cutellipsoid_8h.html  cutellipsoid_8h_source.html  cutsphere_8h_source.html  cutvoxel_8h_source.html  dir_015b3d73a8eb0e7ba6481175415fc5da.html  figurageometrica_8h.html  (+23 more)
Project_Figura_Geometrica/: CMakeLists.txt  cutbox.cpp  cutbox.h  cutellipsoid.h  cutsphere.cpp  cutsphere.h  cutvoxel.h  figurageometrica.h  file_functions.h  main.cpp  putbox.h  putellipsoid.cpp  putellipsoid.h  putsphere.cpp  putsphere.h  putvoxel.cpp  putvoxel.h  reader.cpp  reader.h  sculptor.cpp  sculptor.h  txtFile.txt  voxel.h
doxygen/: Doxyfile  doxygen_log.txt
(+377 files in other folders)
